# docstring-tailor

./: .gitignore  LICENSE  README.md  main.py  makefile  pyproject.toml
data/input/: test_input_too_long.py  test_input_too_short.py
data/output/: test_output_too_long.py  test_output_too_short.py
src/docstring_tailor/: cli_config.py  constants.py  docstring_formatter.py  docstring_parser.py  docstring_section_formatter.py  docstring_section_parser.py  docstring_visitor.py  docstring_visitor_ir.py  ir_model.py  main.py  main_parser.py  multi_line_docstring_formatter.py  utils.py
src/docstring_tailor/defaults/: constants.py  docstring_keywords.py  ir_model.py  ir_model_new.py
src/docstring_tailor/parser/: docstring_parser.py  docstring_section_parser.py  docstring_structured_list_parser.py  parser_factory.py
src/docstring_tailor/parsing/: google_parser.py
src/docstring_tailor/renderer/: base_renderer.py  docstring_renderer.py  google_renderer.py  numpy_renderer.py  renderer_factory.py
src/docstring_tailor/utils/: utils_cli.py  utils_file_system.py  utils_formatting.py  utils_keyword_translation.py  utils_list_detection.py  utils_parsing.py  utils_printing.py  utils_testing.py
tests/: test_docstring_tailor.py  test_docstring_visitor.py  test_formatting.py  utils_test.py
tests/cases/: config_model.py  formatting_cases.py
tests/fixtures/all_docstrings/: all_docstrings_100.py  all_docstrings_60.py  all_docstrings_80.py  all_docstrings_too_long.py  all_docstrings_too_short.py
tests/fixtures/class_docstring/: class_docstring_100.py  class_docstring_60.py  class_docstring_80.py
tests/fixtures/formatted/: all_60.py  all_80.py  module_ordered_list_100.py
tests/fixtures/function_docstring/: function_docstring_100.py  function_docstring_60.py  (+1 more)
tests/mock_data/: __init__.py  mock_data.py
(+70 files in other folders)
