[project]
name = "docstring-tailor"
version = "0.1.0"
description = "Automatic formatting of Python docstrings according to PEP 257"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libcst>=1.8.6",
    "logging>=0.4.9.6",
    "typer>=0.26.4",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.6",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = [
    "I",    # isort-style import sorting
    "ANN",  # annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
docstring_tailor = "src.docstring_tailor.main:app"