[project]
name = "docstring-tailor"
version = "0.2.1.dev5"
description = "Automatic formatting of Python docstrings according to PEP 257"
authors = [{ name = "Auke Bruinsma", email = "afbruinsma@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.8.6",
    "typer>=0.26.4",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.6",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = [
    "I",    # isort-style import sorting
    "ANN",  # annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docstring_tailor"]

[project.scripts]
docstring_tailor = "docstring_tailor.main:app"
